Add menu item. home news list desgin exact pattern,

--- a/app/src/main/res/layout/row_common_news_item.xml
+++ b/app/src/main/res/layout/row_common_news_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:paddingTop="4dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginLeft="2dp"
+    android:background="@drawable/bar_common_news"
     android:paddingBottom="4dp">
 
     <ImageView
@@ -11,6 +14,7 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         android:padding="2dp"
+        android:layout_marginLeft="2dp"
         android:gravity="center"
 
         />
