--- a/app/src/main/res/layout/footer_horizontallist_item.xml
+++ b/app/src/main/res/layout/footer_horizontallist_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
 
     <it.sephiroth.android.library.widget.HListView
         android:id="@+id/dayHListView"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"
         app:dividerWidth="5dp"
         android:paddingBottom="2dip"
         />
