--- a/app/src/main/res/layout/row_others_news.xml
+++ b/app/src/main/res/layout/row_others_news.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:orientation="vertical"
+    android:paddingBottom="4dp"
+    android:paddingTop="4dp">
 
     <ImageView
         android:id="@+id/others_news_icon"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:padding="2dp" />
+
     <TextView
         android:id="@+id/otersnews_title"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="News title"
-        android:textColor="#000"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-       android:padding="2dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:padding="2dp"
+        android:text="News title"
+        android:textColor="#000" />
 
 </LinearLayout>
