--- a/app/src/main/res/layout/headertilte.xml
+++ b/app/src/main/res/layout/headertilte.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-   >
-
+    android:background="#F7F7F7"
+    android:orientation="horizontal">
 
     <TextView
-       android:id="@+id/headerTitle"
+        android:id="@+id/headerTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="News title"
         android:layout_weight="2"
-        android:textColor="#000"
-       android:padding="2dp"
-        android:gravity="center"/>
+        android:gravity="center|left"
+        android:padding="5dp"
+        android:text="News title"
+        android:textSize="16sp"
+        android:textColor="@android:color/black" />
+
     <TextView
         android:id="@+id/detailsBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/aro"
         android:layout_weight="1"
-        android:textColor="#000"
-
-        android:padding="2dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/aro"
+        android:textColor="@android:color/holo_blue_dark" />
 
 </LinearLayout>
