--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#f7f7f7"
     tools:context="com.example.shohel.khaler_kontho.MainActivity">
 
@@ -14,10 +10,9 @@
     <ListView
         android:id="@+id/lvNewsList"
         android:layout_width="match_parent"
-        android:background="#f7f7f7"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:dividerHeight="5dp"
+        >
     </ListView>
-
 
 </RelativeLayout>
