--- a/app/src/main/res/layout/row_first_item.xml
+++ b/app/src/main/res/layout/row_first_item.xml
@@ -1,61 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img_commonnews"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-       />
+        android:layout_height="@dimen/fullscreen_image_height"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/tvTitleComonnews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="LEad News Here"
-        android:textSize="20sp"
         android:textColor="#000"
-        android:layout_margin="10dp"
-        android:textStyle="bold"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp">
+        android:padding="10dp">
+
         <TextView
             android:id="@+id/tvDatetime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:gravity="center"
+            android:text="Date here,"
             android:textColor="#9E9E9E"
-            android:textSize="12sp"
-            android:text="Date here,"/>
+            android:textSize="12sp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:gravity="center"
-            android:visibility="gone"
-            android:text="time here"/>
+            android:text="time here"
+            android:visibility="gone" />
 
         <View
             android:layout_width="5px"
-            android:layout_height="10dp"
+            android:layout_height="12dp"
             android:layout_gravity="center"
             android:layout_marginRight="8dp"
-            android:gravity="center"
-            android:background="@color/colorPrimaryDark"/>
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center" />
+
         <TextView
             android:id="@+id/cat_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:text="জাতীয়"
             android:textColor="@android:color/holo_blue_light"
-            android:text="জাতীয়"/>
+            android:textSize="12sp" />
 
     </LinearLayout>
 
