--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">10dp</dimen>
     <dimen name="activity_vertical_margin">10dp</dimen>
+
+
+    <dimen name="fullscreen_image_height">200dp</dimen>
+    <dimen name="default_image">100dp</dimen>
+
+
 </resources>
