--- a/app/src/main/res/layout/recycle_common_item.xml
+++ b/app/src/main/res/layout/recycle_common_item.xml
@@ -2,41 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     >
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:background="@android:color/white"
+        android:elevation="1dp">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+       >
 
     <ImageView
-        android:id="@+id/img_commonnews"
-        android:layout_width="@dimen/default_image"
-        android:layout_height="@dimen/default_image"
-        android:layout_marginLeft="2dp"
+        android:id="@+id/imag_comm"
+        android:layout_width="@dimen/default_imagew"
+        android:layout_height="@dimen/default_imageh"
         android:gravity="center"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/defaulticon"
         android:scaleType="fitXY"
         />
 
-    </LinearLayout>
-
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/default_imageh"
         android:gravity="center_vertical"
         android:paddingLeft="5dp"
+        android:layout_toRightOf="@+id/imag_comm"
         android:orientation="vertical">
-
         <TextView
-            android:id="@+id/tvTitleComonnews"
-            android:layout_width="wrap_content"
+            android:id="@+id/commonTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title here"
+            android:text=""
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -47,15 +46,14 @@
             >
 
             <TextView
-                android:id="@+id/tvDatetime"
+                android:id="@+id/comDateTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
                 android:gravity="center"
-                android:text="Date time"
+                android:text=""
                 android:textColor="#9E9E9E"
                 android:textSize="12sp" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -63,8 +61,8 @@
                 android:gravity="center"
                 android:text="time here"
                 android:visibility="gone" />
-
             <View
+                android:id="@+id/divderView"
                 android:layout_width="5px"
                 android:layout_height="10dp"
                 android:layout_gravity="center"
@@ -73,14 +71,14 @@
                 android:gravity="center" />
 
             <TextView
+                android:id="@+id/common_cat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="জাতীয়"
+                android:text=""
                 android:textColor="@android:color/holo_blue_light"
                 android:textSize="12sp" />
-
         </LinearLayout>
-
     </LinearLayout>
-
+    </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
