--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -2,6 +2,7 @@
 
     <!-- small dimen -->
      <dimen name="fullscreen_image_height">150dp</dimen>
-    <dimen name="default_image">80dp</dimen>
+    <dimen name="default_imageh">85dp</dimen>
+    <dimen name="default_imagew">110dp</dimen>
 
 </resources>
