--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -2,6 +2,7 @@
 
     <!-- Xlarge dimen -->
      <dimen name="fullscreen_image_height">250dp</dimen>
-    <dimen name="default_image">150dp</dimen>
+    <dimen name="default_imageh">160dp</dimen>
+    <dimen name="default_imagew">210dp</dimen>
 
 </resources>
