--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,8 @@
 
 
     <dimen name="fullscreen_image_height">200dp</dimen>
-    <dimen name="default_image">100dp</dimen>
+    <dimen name="default_imageh">110dp</dimen>
+    <dimen name="default_imagew">140dp</dimen>
 
 
 </resources>
