--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
-
-   <!-- <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:id="@+id/toolbar"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="@string/app_name" />-->
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/homTop"
         android:minHeight="?attr/actionBarSize"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -77,16 +67,12 @@
         android:id="@+id/drawerLayout"
         >
 
-
-
     <FrameLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/containerView">
      </FrameLayout>
-
-
 
     <android.support.design.widget.NavigationView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -99,9 +85,6 @@
         app:menu="@menu/drawermenu"
         android:layout_marginTop="-24dp"
         />
-
-
-
     </android.support.v4.widget.DrawerLayout>
 
     </LinearLayout>
