--- a/app/src/main/res/layout/footer_horizontallist_item.xml
+++ b/app/src/main/res/layout/footer_horizontallist_item.xml
@@ -3,16 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:layout_height="wrap_content"
+   >
 
-
-    <it.sephiroth.android.library.widget.HListView
-        android:id="@+id/dayHListView"
+   <!-- <it.sephiroth.android.library.widget.HListView
+        android:id="@+id/homHList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerWidth="5dp"
+        android:background="@android:color/white"
         android:paddingBottom="2dip"
-        />
+        />-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/horizontal_recycler_view"
+        android:background="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
