--- a/app/src/main/res/layout/recycle_first_item.xml
+++ b/app/src/main/res/layout/recycle_first_item.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:elevation="1dp">
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img_commonnews"
         android:layout_width="match_parent"
         android:layout_height="@dimen/fullscreen_image_height"
+        android:src="@drawable/fullscreen"
         android:scaleType="fitXY" />
 
     <TextView
@@ -31,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:gravity="center"
-            android:text="Date here,"
+            android:text=""
             android:textColor="#9E9E9E"
             android:textSize="12sp" />
 
@@ -55,10 +66,12 @@
             android:id="@+id/cat_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="জাতীয়"
+            android:text=""
             android:textColor="@android:color/holo_blue_light"
             android:textSize="12sp" />
 
     </LinearLayout>
+    </LinearLayout>
+   </android.support.v7.widget.CardView>
 
 </LinearLayout>
