--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="black">#000</color>
     <color name="orange">#FA0</color>
     <color name="white">#FFF</color>
+    <color name="homTop">#0089CF</color>
+
 
     <color name="kalerkontho_actionbar">#0089CF</color>
 
