--- a/app/src/main/res/layout/mostread.xml
+++ b/app/src/main/res/layout/mostread.xml
@@ -9,6 +9,11 @@
         android:id="@+id/mostReadNewRecList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:background="@android:color/white"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"
+        android:padding="5dp"
   />
 
 </RelativeLayout>
