--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -4,5 +4,10 @@
      <dimen name="fullscreen_image_height">220dp</dimen>
     <dimen name="default_imageh">150dp</dimen>
     <dimen name="default_imagew">190dp</dimen>
+    <dimen name="space">15dp</dimen>
+
+
+    <dimen name="grid_imageh">150dp</dimen>
+    <dimen name="grid_imagew">200dp</dimen>
     
 </resources>
