--- a/app/src/main/res/layout/latestnews.xml
+++ b/app/src/main/res/layout/latestnews.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,9 +11,11 @@
         android:id="@+id/latestNewRecList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:background="@android:color/white"
+        android:clipToPadding="false"
         android:scrollbars="vertical"
+        android:padding="5dp"
   />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
