--- a/app/src/main/res/layout/nirbachitofragment.xml
+++ b/app/src/main/res/layout/nirbachitofragment.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="#F5F5F5"
  >
 
@@ -72,7 +71,6 @@
             android:paddingBottom="10dp"
             android:text="@string/letsgoo"/>
 
-
     </LinearLayout>
 
 
@@ -82,6 +80,14 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:visibility="gone"/>
+
+
+    <ProgressBar
+        android:id="@+id/progressNirbachito"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:visibility="gone"/>
 
 </RelativeLayout>
