--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,10 @@
     <dimen name="default_imagew">140dp</dimen>
 
 
+    <dimen name="grid_imageh">120dp</dimen>
+    <dimen name="grid_imagew">160dp</dimen>
+
+    <dimen name="space">10dp</dimen>
+
+
 </resources>
