--- a/app/src/main/res/layout/photo_row.xml
+++ b/app/src/main/res/layout/photo_row.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="#F5F5F5"
     >
-
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,11 +12,12 @@
 
         <ImageView
             android:id="@+id/photo"
-            android:layout_width="@dimen/grid_imageh"
-            android:layout_height="@dimen/grid_imageh"
-            android:background="@drawable/defaulticon"
+            android:layout_width="@dimen/default_imageh"
+            android:layout_height="@dimen/default_imageh"
+            android:layout_gravity="center_horizontal"
+            android:padding="2dp"
+            android:src="@drawable/frame"
             android:scaleType="fitXY" />
-
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
