--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="default_imageh">85dp</dimen>
     <dimen name="default_imagew">110dp</dimen>
     <dimen name="space">3dp</dimen>
+    <dimen name="spacepad">2dp</dimen>
 
     <dimen name="grid_imageh">100dp</dimen>
     <dimen name="grid_imagew">140dp</dimen>
