--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="default_imageh">160dp</dimen>
     <dimen name="default_imagew">210dp</dimen>
     <dimen name="space">10dp</dimen>
+    <dimen name="spacepad">4dp</dimen>
 
     <dimen name="grid_imageh">150dp</dimen>
     <dimen name="grid_imagew">200dp</dimen>
