--- a/app/src/main/res/layout/dialog_row.xml
+++ b/app/src/main/res/layout/dialog_row.xml
@@ -3,16 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerInParent="true"
-    android:background="#F5F5F5"
+    android:background="@android:color/transparent"
     >
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:elevation="1dp">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:gravity="center">
 
         <TextView
@@ -21,24 +22,51 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:maxLines="2"
+            android:lines="2"
             android:textStyle="bold"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:rotation="180"
+                    android:src="@drawable/back_gone"/>
 
         <ImageView
             android:id="@+id/photo"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="200dp"
             android:padding="2dp"
+            android:layout_weight="8"
             android:layout_below="@+id/titlePhoto"
             android:src="@drawable/frame"
             android:scaleType="fitXY" />
 
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/back_gone"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
+
+        </LinearLayout>
+
+            <TextView
+                android:id="@+id/photoNameText"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/back_gone"/>
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:lines="1"
+                android:maxLines="1"
+                android:textStyle="bold"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
