--- a/app/src/main/res/layout/photodialog.xml
+++ b/app/src/main/res/layout/photodialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/wallet_bright_foreground_disabled_holo_light"
+    android:background="@android:color/transparent"
     android:orientation="vertical">
 
 
