--- a/app/src/main/res/layout/dialog_row.xml
+++ b/app/src/main/res/layout/dialog_row.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerInParent="true"
-    android:background="#D8000000"
+    android:background="#99000000"
     >
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:background="#80808080"
         android:elevation="1dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,9 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:maxLines="2"
-            android:lines="2"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:maxLines="1"
+            android:lines="1"
             android:textStyle="bold"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -61,8 +64,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:lines="1"
+                android:gravity="center"
                 android:maxLines="1"
                 android:textStyle="bold"/>
 
