--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
 
     <dimen name="space">5dp</dimen>
     <dimen name="spacepad">2dp</dimen>
+    <dimen name="toggleh">33dp</dimen>
 
 
 </resources>
