--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
 
     <dimen name="grid_imageh">120dp</dimen>
     <dimen name="grid_imagew">160dp</dimen>
+    <dimen name="dim10">10dp</dimen>
 
     <dimen name="space">5dp</dimen>
     <dimen name="spacepad">2dp</dimen>
