--- a/app/src/main/res/layout/photo_row.xml
+++ b/app/src/main/res/layout/photo_row.xml
@@ -10,14 +10,21 @@
         android:layout_height="wrap_content"
         android:elevation="1dp">
 
+      <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@color/gray">
+
         <ImageView
             android:id="@+id/photo"
-            android:layout_width="@dimen/default_imageh"
-            android:layout_height="@dimen/default_imageh"
+            android:layout_width="@dimen/photow"
+            android:layout_height="@dimen/photoh"
             android:layout_gravity="center_horizontal"
-            android:padding="2dp"
+            android:layout_margin="1px"
             android:src="@drawable/frame"
             android:scaleType="fitXY" />
+
+      </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
