--- a/app/src/main/res/layout/dialog_row.xml
+++ b/app/src/main/res/layout/dialog_row.xml
@@ -3,75 +3,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerInParent="true"
-    android:background="#99000000"
-    >
-    <android.support.v7.widget.CardView
+    android:background="#00000000">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="#80808080"
-        android:elevation="1dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/titlePhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:gravity="center"
-            android:textSize="16sp"
-            android:padding="10dp"
-            android:maxLines="1"
             android:lines="1"
-            android:textStyle="bold"/>
-            <LinearLayout
+            android:maxLines="1"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:background="@color/homTop"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/photo"
+                android:layout_margin="1px"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:rotation="180"
-                    android:src="@drawable/back_gone"/>
-
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:padding="2dp"
-            android:layout_weight="8"
-            android:layout_below="@+id/titlePhoto"
-            android:src="@drawable/frame"
-            android:scaleType="fitXY" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:src="@drawable/back_gone"/>
-
-
+                android:layout_height="@dimen/fullscreen_image_height"
+                android:layout_below="@+id/titlePhoto"
+                android:scaleType="fitXY"
+                android:src="@drawable/defaulticon" />
         </LinearLayout>
 
-            <TextView
-                android:id="@+id/photoNameText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:lines="1"
-                android:gravity="center"
-                android:maxLines="1"
-                android:textStyle="bold"/>
 
-        </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/photoNameText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:lines="1"
+            android:maxLines="1"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
