--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -5,12 +5,19 @@
     <dimen name="default_imageh">110dp</dimen>
     <dimen name="default_imagew">140dp</dimen>
     <dimen name="space">5dp</dimen>
-    <dimen name="spacepad">2dp</dimen>
+    <dimen name="spacepad">1dp</dimen>
+
+
 
 
     <dimen name="grid_imageh">120dp</dimen>
     <dimen name="grid_imagew">160dp</dimen>
     <dimen name="toggleh">33dp</dimen>
+    <dimen name="dim20">20dp</dimen>
+    <dimen name="dim07">7dp</dimen>
+
+    <dimen name="photoh">100dp</dimen>
+    <dimen name="photow">120dp</dimen>
 
 
 </resources>
