--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -5,10 +5,16 @@
     <dimen name="default_imageh">85dp</dimen>
     <dimen name="default_imagew">110dp</dimen>
     <dimen name="space">3dp</dimen>
-    <dimen name="spacepad">2dp</dimen>
+    <dimen name="spacepad">1dp</dimen>
 
     <dimen name="grid_imageh">100dp</dimen>
     <dimen name="grid_imagew">140dp</dimen>
     <dimen name="toggleh">25dp</dimen>
+
+    <dimen name="dim20">15dp</dimen>
+    <dimen name="dim07">5dp</dimen>
+
+    <dimen name="photoh">90dp</dimen>
+    <dimen name="photow">100dp</dimen>
 
 </resources>
