--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -5,10 +5,16 @@
     <dimen name="default_imageh">160dp</dimen>
     <dimen name="default_imagew">210dp</dimen>
     <dimen name="space">10dp</dimen>
-    <dimen name="spacepad">4dp</dimen>
+    <dimen name="spacepad">2dp</dimen>
 
     <dimen name="grid_imageh">150dp</dimen>
     <dimen name="grid_imagew">200dp</dimen>
     <dimen name="toggleh">45dp</dimen>
+
+    <dimen name="dim20">30dp</dimen>
+    <dimen name="dim07">11dp</dimen>
+
+    <dimen name="photoh">150dp</dimen>
+    <dimen name="photow">185dp</dimen>
 
 </resources>
