--- a/app/src/main/res/layout/motamot.xml
+++ b/app/src/main/res/layout/motamot.xml
@@ -57,6 +57,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tvComment"
         android:layout_marginTop="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
