--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -15,6 +15,8 @@
     <dimen name="toggleh">33dp</dimen>
     <dimen name="dim20">20dp</dimen>
     <dimen name="dim07">7dp</dimen>
+    <dimen name="dim30">30dp</dimen>
+    <dimen name="dim40">40dp</dimen>
 
     <dimen name="photoh">100dp</dimen>
     <dimen name="photow">120dp</dimen>
