--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -13,6 +13,8 @@
 
     <dimen name="dim20">15dp</dimen>
     <dimen name="dim07">5dp</dimen>
+    <dimen name="dim30">20dp</dimen>
+    <dimen name="dim40">30dp</dimen>
 
     <dimen name="photoh">90dp</dimen>
     <dimen name="photow">100dp</dimen>
